--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,24 @@
 body {
-    font-family: Netflix Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Netflix Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
     background-color: #111;
     margin-top: 1%;
     margin-left: 4%;
-  }
-  ul {
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
     margin: 0;
     padding: 0;
-  }
+}
 
- img {
-	width: 100%;
+li {
+    margin: 1rem;
+}
+
+img {
+    width: 100%;
     height: 100%;
 }
 
@@ -22,21 +29,22 @@ body {
     align-items: center;
     /* justify-content: space-between; */
     height: 68px;
-  
+
 }
 
 .navLogo {
     width: 125px;
-    
+
 }
 
 .navMenu {
     color: white;
-    /* font-size: 14px; */
-    
+    font-size: 14px;
+
 }
 
 .navAvatar {
     width: 50px;
-    
+    margin-left: auto;
+
 }
