--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+  }
 body {
     font-family: Netflix Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
     background-color: #111;
     margin-top: 1%;
     margin-left: 4%;
+    margin-right: 1%;
 }
 
 ul {
@@ -53,19 +58,19 @@ img {
 }
 
 .searchIcon{
-    width: 25%;
-    height: 25%;
-    padding: 8%;
+    width: 20%;
+    height: 20%;
+    padding: 5%;
 }
 
 .bellIcon{
-    width: 30%;
-    height: 30%;
-    padding: 8%;
+    width: 20%;
+    height: 20%;
+    padding: 5%;
 }
 
 .avatar  {
-    width: 40%;
-    height: 40%;
-    padding: 8%;
+    width: 30%;
+    height: 30%;
+    padding: 5%;
 }
