--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     font-family: Netflix Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
     background-color: #111;
     margin-top: 1%;
-    margin-left: 4%;
+    margin-left: 1%;
     margin-right: 1%;
 }
 
@@ -32,7 +32,7 @@ img {
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* justify-content: space-between; */
+   margin-left: 1%;
     height: 68px;
 
 }
@@ -74,3 +74,63 @@ img {
     height: 30%;
     padding: 5%;
 }
+
+/* billboard section */
+
+.billboard {
+
+    background-image: url('/images/banner.jpg');
+    background-size: cover;
+    background-position: center center;
+    color: white;
+    object-fit: contain;
+    height: 448px;
+}
+
+.billboardContents {
+    margin-left: 30px;
+    padding-top: 140px;
+    height: 190px;
+  }
+  
+  .billboardTitle {
+    font-size: 3rem;
+    font-weight: 800;
+    padding-bottom: 0.3rem;
+  }
+  
+  .billboardDescription {
+    width: 45rem;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 0.8rem;
+    max-width: 360px;
+    height: 180px;
+  }
+  
+  .billboardButton {
+    cursor: pointer;
+    color: #fff;
+    outline: none;
+    border: none;
+    font-weight: 700;
+    border-radius: 0.2vw;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: rgba(51, 51, 51, 0.5);
+  }
+  
+  .billboardButton:hover {
+    color: #000;
+    background-color: #e6e6e6;
+    transition: all 0.2s;
+  }
+  
+  .bbillboardFadeBottom {
+    margin-top: 145px;
+    height: 7.4rem;
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+  }
