--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     font-family: Netflix Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
     background-color: #111;
-    margin-top: 1%;
+    margin-top: 0%;
     margin-left: 1%;
     margin-right: 1%;
 }
@@ -32,21 +32,22 @@ img {
     display: flex;
     flex-direction: row;
     align-items: center;
-   margin-left: 1%;
-    height: 68px;
+    margin-left: 2%;
+    height: 90px;
 
 }
 /* logo */
 .navLogo {
-    width: 120px;
+    width: 132px;
     margin-top: 0.3%;
     align-items: center;
 }
 /* menu */
 .navMenu {
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     align-items: center;
+    margin-left: 1%;
 }
 /* sub menu */
 .navSubMenu {
@@ -129,8 +130,44 @@ img {
     transition: all 0.2s;
   }
   
-  .bbillboardFadeBottom {
+  .billboardFadeBottom {
     margin-top: 145px;
     height: 7.4rem;
     background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+  }
+
+  .rowPoster {
+    width: 100%;
+    object-fit: contain;
+    max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450ms;
+  }
+  
+  .rowPosters {
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+  }
+  
+  .rowPoster:hover {
+    transform: scale(1.08);
+  }
+  
+  .rowPosters::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .rowPosterLarge {
+    max-height: 300px;
+  }
+  
+  .rowPosterLarge:hover {
+    transform: scale(1.09);
+  }
+  
+  .contentRow {
+    color: white;
+    margin-left: 20px;
   }
